[package]
name = "rav1e-core"
version = "0.1.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
description = "Definitions used in librav1e-kernels and librav1e. Internal Rav1e crate; do not use."
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the version on crates.io is really out-of-date.
packed_simd = { git = "https://github.com/rust-lang-nursery/packed_simd.git" }
num-traits = "0.2"
paste = "0.1"
cfg-if = "0.1"
arg_enum_proc_macro = "0.3"
